# bulk-minting-contract

./: Cargo.toml  README.md  _rust_setup.sh  build.sh  package.json
bulk-minting/: Cargo.toml
bulk-minting/src/: lib.rs  nft.wasm
tests/: simulation_tests.rs  utils.rs
