[package]
name = "bulk-minting-contract-wrapper"
version = "0.1.0"
authors = ["Irfianto <irfi@paras.id>"]
edition = "2018"

[dev-dependencies]
near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"
near-sdk-sim = "4.0.0-pre.3"
bulk-minting = { path = "./bulk-minting" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "bulk-minting",
]
